--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,120 @@
     <title>HTML Academy: Пинк</title>
   </head>
   <body>
+    <header class="page-header">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="img/logotype-white-mobile.svg" width="75" height="22" alt="Pink">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">Открыть меню</button>
+        <div>
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--active">
+              <a>Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a>Фотография</a>
+            </li>
+            <li class="site-list__item">
+              <a>Конкурс</a>
+            </li>
+            <li class="site-list__item">
+              <a>HTML Academy</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Профессиональный HTML и CSS</a>», уровень 2.</p>
+    <main class="page-main">
+      <section class="download">
+        <button class="download__button button">Скачать приложение</button>
+        <ul class="download__system-list">
+          <li class="download__system-version">Apple</li>
+          <li class="download__system-version">Android</li>
+          <li class="download__system-version">Windows</li>
+        </ul>
+        <p class="download__info">
+          Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
+        </p>
+      </section>
+      <section class="slogan">
+        <h2 class="slogan__text">Устали от серости мегаполиса?</h2>
+        <h2 class="slogan__text">Нам есть, что вам предложить!</h2>
+      </section>
+      <section class="advantages">
+        <h2 class="visually-hidden">Наши преимущества</h2>
+        <ul class="advanteges__list">
+          <li class="advantages__item">
+            <h3 class="advantages__title">Поднимает настроение</h3>
+            <p class="advantages__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Меняет мир вокруг</h3>
+            <p class="advantages__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Заводит новых друзей</h3>
+            <p class="advantages__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+          </li>
+        </ul>
+      </section>
+      <section class="reviews">
+        <div class="reviews__wrapper slider">
+          <h2 class="visually-hidden">Отзывы о нас</h2>
+          <div class="reviews__list slider__list">
+            <blockquote class="reviews__item slider__item">
+              <cite class="reviews__author-name">Николай Петров</cite>
+              <p class="reviews__text">&laquo;Это приложение перевернуло мой мир и позволило по новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!&raquo;</p>
+            </blockquote>
+          </div>
+          <p class="reviews__toggles slider__toggles">
+            <button class="slider__toggle" type="button">1</button>
+            <button class="slider__toggle" type="button">2</button>
+            <button class="slider__toggle" type="button">3</button>
+          </p>
+        </div>
+      </section>
+      <section class="goods">
+        <div class="goods__wrapper slider">
+          <header class="goods__header">
+            <h2 class="visually-hidden">Ассортимент Pink</h2>
+            <b class="goods__name">Стандарт</b>
+            <span class="goods__price">3,99 usd</span>
+          </header>
+          <table class="goods__list">
+            <tr>
+              <td class="goods__feature">Розовый фильтр</td>
+              <td class="goods__feature-exist"><input type="checkbox" checked></td>
+            </tr>
+            <tr>
+              <td class="goods__feature">Смайлики</td>
+              <td class="goods__feature-exist"><input type="checkbox" checked></td>
+            </tr>
+            <tr>
+              <td class="goods__feature">Комментарии</td>
+              <td class="goods__feature-exist"><input type="checkbox"></td>
+            </tr>
+          </table>
+          <p class="goods__toggles slider__toggles">
+            <button class="slider__toggle" type="button">1</button>
+            <button class="slider__toggle" type="button">2</button>
+            <button class="slider__toggle" type="button">3</button>
+          </p>
+        </div>
+      </section>
+    </main>
 
+    <footer class="page-footer">
+      <div class="page-footer__contacts contacts">
+        <p class="contacts__recourse">Остались вопросы? Свяжитесь с нами.</p>
+        <p class="contacts__text">Звоните:</p>
+        <p class="contacts__info contacts__phone">+7 (812) 555-66-66</p>
+        <p class="contacts__text">Пишите:</p>
+        <p class="contacts__info contacts__email">mail@htmlacademy.ru</p>
+        <p class="contacts__text">Приезжайте в гости:</p>
+        <p class="contacts__info contacts__adress">ул.Большая Конюшенная, 19/8</p>
+      </div>
+    </footer>
   </body>
 </html>
