Заменил blockquote на div, добавилмодификатор к панорамному изображению, заменил button на ссылки

--- a/source/photo.html
+++ b/source/photo.html
@@ -38,55 +38,55 @@
       <section class="photo">
         <div class="photo__wrapper">
           <div class="photo__list">
-            <blockquote class="photo__item">
-              <img class="photo__panorame-image" src="img/panorama-mobile.jpg" width="320" height="137" alt="panorame">
+            <div class="photo__item">
+              <img class="photo__image--panorame" src="img/panorama-mobile.jpg" width="320" height="137" alt="panorame">
               <cite class="photo__author-name">Анна</cite>
               <span class="photo__time">(5 минут назад)</span>
               <p class="photo__text">Прыгать или нет? Напишите ответ в своем комментарии и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
               <span class="photo__like">Нравится: 215</span>
-            </blockquote>
-            <blockquote class="photo__item">
+            </div>
+            <div class="photo__item">
               <img class="photo__image" src="img/photo-1-mobile.jpg" width="280" height="180" alt="white car">
               <cite class="photo__author-name">Левон</cite>
               <span class="photo__time">(5 часов назад)</span>
               <p class="photo__text">Вчера он на Луну летал, сегодня в руки к нам попалю.</p>
               <span class="photo__like">Нравится: 356</span>
-            </blockquote>
-            <blockquote class="photo__item">
+            </div>
+            <div class="photo__item">
               <img class="photo__image" src="img/photo-2-mobile.jpg" width="280" height="180" alt="drums">
               <cite class="photo__author-name">Антон</cite>
               <span class="photo__time">(12 часов назад)</span>
               <p class="photo__text">Соседи будут рады!</p>
               <span class="photo__like">Нравится: 666</span>
-            </blockquote>
-            <blockquote class="photo__item">
+            </div>
+            <div class="photo__item">
               <img class="photo__image" src="img/photo-3-mobile.jpg" width="280" height="180" alt="big window">
               <cite class="photo__author-name">Борис</cite>
               <span class="photo__time">(20 часов назад)</span>
               <p class="photo__text">Здесь могла быть ваша цитата о высоком и вечном.</p>
               <span class="photo__like">Нравится: 215</span>
-            </blockquote>
-            <blockquote class="photo__item">
+            </div>
+            <div class="photo__item">
               <img class="photo__image" src="img/photo-4-mobile.jpg" width="280" height="180" alt="kuban market">
               <cite class="photo__author-name">Сергей</cite>
               <span class="photo__time">(25 часов назад)</span>
               <p class="photo__text">Самая кубанская в мире!</p>
               <span class="photo__like">Нравится: 4</span>
-            </blockquote>
-            <blockquote class="photo__item">
+            </div>
+            <div class="photo__item">
               <img class="photo__image" src="img/photo-5-mobile.jpg" width="280" height="180" alt="mountains and males feet">
               <cite class="photo__author-name">Максим</cite>
               <span class="photo__time">(40 часов назад)</span>
               <p class="photo__text">И где снег-то?</p>
               <span class="photo__like">Нравится: 150</span>
-            </blockquote>
-            <blockquote class="photo__item">
+            </div>
+            <div class="photo__item">
               <img class="photo__image" src="img/photo-6-mobile.jpg" width="280" height="180" alt="airplane wing">
               <cite class="photo__author-name">Надежда</cite>
               <span class="photo__time">(45 часов назад)</span>
               <p class="photo__text">Всем GM и взаимные лайки!</p>
               <span class="photo__like">Нравится: 2560</span>
-            </blockquote>
+            </div>
           </div>
           <div class="photo__slogan">
             <p class="photo__slogan-text">Затмите их всех! Выкладывайте все, что накопилось в телефоне!</p>
@@ -108,8 +108,8 @@
             <div class="upload__toggle"></div>
           </div>
           <div class="upload__btn-container">
-            <button class="upload__btn-post" type="button">Запостить</button>
-            <button class="upload__btn-unpost" type="button">Отмена</button>
+            <a class="upload__btn-post" href="#">Запостить</a>
+            <a class="upload__btn-unpost" href="#">Отмена</a>
           </div>
         </div>
       </section>
