Вынул чекбокс из <td>, обернул в <div> и положил в вышележащий <td>

--- a/source/index.html
+++ b/source/index.html
@@ -92,16 +92,19 @@
               </tr>
             </thead>
             <tr>
-              <td class="goods__feature">Розовый фильтр</td>
-              <td class="goods__feature-exist"><input type="checkbox" checked></td>
+              <td class="goods__feature">Розовый фильтр
+                <div class="goods__feature-exist"><input type="checkbox" checked></div>
+              </td>
             </tr>
             <tr>
-              <td class="goods__feature">Смайлики</td>
-              <td class="goods__feature-exist"><input type="checkbox" checked></td>
+              <td class="goods__feature">Смайлики
+                <div class="goods__feature-exist"><input type="checkbox" checked></div>
+              </td>
             </tr>
             <tr>
-              <td class="goods__feature">Комментарии</td>
-              <td class="goods__feature-exist"><input type="checkbox"></td>
+              <td class="goods__feature">Комментарии
+                <div class="goods__feature-exist"><input type="checkbox"></div>
+              </td>
             </tr>
           </table>
           <p class="goods__toggles slider__toggles">
