--- a/source/form.html
+++ b/source/form.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML Academy: Пинк</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="page-header">
       <a class="page-header__logo">
-        <img class="page-header__logo-image" src="img/logotype-white-mobile.svg" width="75" height="22" alt="Pink">
+        <img class="page-header__logo-image" src="#" width="75" height="22" alt="Pink">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -32,7 +33,9 @@
 
     <main class="page-main">
       <section class="page-title">
-        <h1 class="page-title__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
+        <div class="page-title__title-wrapper">
+          <h1 class="page-title__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
+        </div>
       </section>
       <section class="user-form">
         <div class="user-form__wrapper">
@@ -66,7 +69,7 @@
               </div>
               <div class="user-form__block-checkbox">
                 <input class="user-form__checkbox" type="checkbox" name="chuck" id="chuck-field">
-                <label class="user-form__label-checkbox" for="chuck-field">Видел Сака Норриса</label>
+                <label class="user-form__label-checkbox" for="chuck-field">Видел Чака Норриса</label>
               </div>
               <div class="user-form__block-checkbox">
                 <input class="user-form__checkbox" type="checkbox" name="souvenir" id="souvenir-field">
@@ -122,7 +125,7 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <a class="page-footer__logo">
-          <img class="page-footer__logo-image" src="img/logotype-blue-tablet.svg" width="147" height="40" alt="Pink">
+          <img class="page-footer__logo-image" src="#" width="147" height="40" alt="Pink">
         </a>
         <div class="page-footer__social social">
           <ul class="social__list">
@@ -140,7 +143,7 @@
         <div class="page-footer__copyright copyright">
           <span class="copyright__text">Разработано:</span>
           <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-            <img src="img/htmlacademy-logo.svg" width="27" height="34" alt="Htmlacademy">
+            <img src="#" width="27" height="34" alt="Htmlacademy">
           </a>
         </div>
       </div>
