Visually-hidden щоставил в общем файле. Остальное переименовал по БЭМ и распихал обратно по файлам, соответствующим блокам БЭМ, в которых они лежат

--- a/source/form.html
+++ b/source/form.html
@@ -59,7 +59,7 @@
               </div>
             </div>
             <div class="user-form__achievments">
-              <p class="user-form__achievments-title form-title">Ваши безбашенные достижения в приключении</p>
+              <p class="user-form__achievments-title user-form__form-title">Ваши безбашенные достижения в приключении</p>
               <div class="user-form__block-checkbox">
                 <input class="user-form__checkbox" type="checkbox" name="shark-selfie" id="shark-selfie-field" checked>
                 <label class="user-form__label-checkbox" for="shark-selfie-field">Сделал селфи с акулой</label>
@@ -88,7 +88,7 @@
             <div class="user-form__popup-error">
               <h3 class="user-form__popup-header">Что-то пошло не так!</h3>
               <p class="user-form__popup-text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-              <button class="user-form__btn-popup-error form-btn">Ок</button>
+              <button class="user-form__btn-popup-error user-form__form-btn">Ок</button>
             </div>
             <div class="user-form__contacts">
               <div class="user-form__block-input">
@@ -106,11 +106,11 @@
                 <p class="user-form__popup-text">Спасибо за ваше участие. Ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
               </div>
               <div class="user-form__popup-btn-block">
-                <button class="user-form__btn-popup form-btn">Закрыть окно</button>
+                <button class="user-form__btn-popup user-form__form-btn">Закрыть окно</button>
               </div>
             </div>
             <div class="user-form__application">
-              <p class="user-form__application-title form-title">С каким приложением путешествовали?</p>
+              <p class="user-form__application-title user-form__form-title">С каким приложением путешествовали?</p>
               <div class="user-form__block-radio">
                 <input class="user-form__radio" type="radio" id="ios-field"  name="ios"  checked>
                 <label class="user-form__label-radio" for="ios-field">Pink для iOS</label>
@@ -124,11 +124,11 @@
                 <label class="user-form__label-radio" for="windowsphone-field">Windows Phone</label>
               </div>
             </div>
-            <div class="user-form__feedback form-title">
+            <div class="user-form__feedback user-form__form-title">
               <label class="user-form__feedback-title" for="feedback-field">Опишите свои эмоции</label>
               <textarea class="user-form__feedback-text" name="feedback " id="feedback-field" rows="10">Можно прям в красках, не стесняясь в выражениях</textarea>
             </div>
-            <button class="user-form__btn-send form-btn" type="button">Отправить форму</button>
+            <button class="user-form__btn-send user-form__form-btn" type="button">Отправить форму</button>
             <small class="user-form__legend">
               <sup>*</sup> — Обязательные поля
             </small>
