--- a/source/index.html
+++ b/source/index.html
@@ -122,18 +122,18 @@
 
     <footer class="index-page-footer">
       <div class="index-page-footer__contacts contacts">
-        <p class="contacts__recourse">Остались вопросы? Свяжитесь с нами.</p>
+        <p class="index-page-footer__contacts-recourse contacts__recourse">Остались вопросы? Свяжитесь с нами.</p>
         <div class="contacts__info-block">
-          <p class="contacts__text">Звоните:</p>
-          <p class="contacts__info">+7 (812) 555-66-66</p>
+          <p class="index-page-footer__contacts-text contacts__text">Звоните:</p>
+          <p class="index-page-footer__contacts-info contacts__info">+7 (812) 555-66-66</p>
         </div>
         <div class="contacts__info-block">
-          <p class="contacts__text">Пишите:</p>
-          <p class="contacts__info">mail@htmlacademy.ru</p>
+          <p class="index-page-footer__contacts-text contacts__text">Пишите:</p>
+          <p class="index-page-footer__contacts-info contacts__info">mail@htmlacademy.ru</p>
         </div>
         <div class="contacts__info-block">
-          <p class="contacts__text">Приезжайте в гости:</p>
-          <p class="contacts__info">ул.Большая Конюшенная, 19/8</p>
+          <p class="index-page-footer__contacts-text contacts__text">Приезжайте в гости:</p>
+          <p class="index-page-footer__contacts-info contacts__info">ул.Большая Конюшенная, 19/8</p>
         </div>
       </div>
     </footer>
