--- a/source/index.html
+++ b/source/index.html
@@ -3,17 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Пинк</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="format-detection" content="telephone=no">
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&amp;subset=cyrillic-ext,latin-ext" rel="stylesheet">
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo">
-        <img class="page-header__logo-image" src="#" width="75" height="22" alt="Pink">
-      </a>
+      <div class="page-header__header-control">
+        <a class="page-header__logo">
+          <img class="page-header__logo-image" src="#" width="75" height="22" alt="Pink">
+        </a>
+        <button class="page-header__toggle" type="button">Открыть меню</button>
+      </div>
       <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">Открыть меню</button>
-        <div>
+        <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
               <a>Главная</a>
@@ -33,18 +37,23 @@
     </header>
 
     <main class="page-main">
-      <section class="title-image">
-      </section>
+      <!--<section class="title-image">-->
+      <!--</section>-->
       <section class="download">
+        <div class="download__slogan-block">
+          <h2 class="download__slogan">Взгляните на жизнь иначе!</h2>
+        </div>
         <a class="download__button button" href="#">Скачать приложение</a>
         <ul class="download__system-list">
           <li class="download__system-version">Apple</li>
           <li class="download__system-version">Android</li>
           <li class="download__system-version">Windows</li>
         </ul>
-        <p class="download__info">
-          Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
-        </p>
+        <div class="download__info-block">
+          <p class="download__info">
+            Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8
+          </p>
+        </div>
       </section>
       <section class="slogan">
         <p class="slogan__text">Устали от серости мегаполиса?</p>
