--- a/source/form.html
+++ b/source/form.html
@@ -7,30 +7,32 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&amp;subset=cyrillic-ext,latin-ext" rel="stylesheet">
   </head>
   <body>
-    <header class="page-header">
+  <header class="page-header">
+    <div class="page-header__header-control">
       <a class="page-header__logo">
         <img class="page-header__logo-image" src="#" width="75" height="22" alt="Pink">
       </a>
-      <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">Открыть меню</button>
-        <div>
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item--active">
-              <a>Главная</a>
-            </li>
-            <li class="site-list__item">
-              <a>Фотография</a>
-            </li>
-            <li class="site-list__item">
-              <a>Конкурс</a>
-            </li>
-            <li class="site-list__item">
-              <a>HTML Academy</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
+      <button class="page-header__toggle" type="button">Открыть меню</button>
+    </div>
+    <nav class="main-nav">
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item site-list__item--active">
+            <a>Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a>Фотография</a>
+          </li>
+          <li class="site-list__item">
+            <a>Конкурс</a>
+          </li>
+          <li class="site-list__item">
+            <a>HTML Academy</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
 
     <main class="page-main">
       <section class="page-title">
